# duckdb_extension_parser_tools

./: CMakeLists.txt  Makefile  README.md  column_parser_examples.sql  extension_config.cmake  test_column_parsing.sql  test_column_parsing_core.sql  unified_analyzer_v2.sql
.github/workflows/: MainDistributionPipeline.yml
src/: parse_columns.cpp  parse_functions.cpp  parse_tables.cpp  parse_tables_extension.cpp  parse_where.cpp  parser_tools_extension.cpp
src/include/: parse_columns.hpp  parse_functions.hpp  parse_tables.hpp  parse_tables_extension.hpp  parse_where.hpp  parser_tools_extension.hpp
test/sql/: parse_tables.test
test/sql/parse_tools/scalar_functions/: is_parsable.test  parse_columns.test  parse_function_names.test  parse_functions.test  parse_table_names.test  parse_tables.test
test/sql/parse_tools/table_functions/: parse_columns.test  parse_columns_edge_cases.test  parse_functions.test  parse_tables.test  parse_where.test
